--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="app-main">
+        <h2>Weather App</h2>
         <div class="input-box" >
             <input type="search" placeholder="Enter City Name..." class="input-box" id="input-box">
         </div>
